Add simple code to proto + Fix things

--- a/exploration/ui_proto.ipynb
+++ b/exploration/ui_proto.ipynb
@@ -4,6 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 0. Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import countergen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. Choose your dataset\n",
     "Put your file next to the notebook and give it's filename here:\n",
     "\n",
@@ -12,6 +38,15 @@
     "[Check that it exists]\n",
     "\n",
     "[Print a few samples]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = countergen.Dataset.from_jsonl(\"D:\\_Docs\\Programmation\\Python\\Counterfactual-Dataset-Generator\\countergen\\data\\datasets\\doublebind.jsonl\")"
    ]
   },
   {
@@ -26,12 +61,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "converters = [countergen.SimpleConverter.from_default(\"gender\")]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 3. Convert!\n",
     "\n",
     "(Just run this cell)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aug_ds = countergen.data_augmentation.generate_all_variations(converters, ds)"
    ]
   },
   {
@@ -46,6 +99,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = countergen.get_huggingface_gpt_model_evaluator()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,6 +116,15 @@
     "[Checkboxs of different metrics & aggregation methods]\n",
     "\n",
     "[Link to somewhere if you want to add your own]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggregator = countergen.aggregators.AveragePerformancePerCategory()"
    ]
   },
   {
@@ -66,12 +137,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = countergen.evaluation.evaluate(aug_ds.samples, model, aggregator)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 6. The results\n",
     "\n",
     "[Beautiful displays]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggregator.display([results])"
    ]
   }
  ],
