Add basic display for the default aggregator
Remove outputs

--- a/exploration/ui_proto.ipynb
+++ b/exploration/ui_proto.ipynb
@@ -104,7 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = countergen.get_huggingface_gpt_model_evaluator()"
+    "model = countergen.get_huggingface_gpt_model_evaluator()\n",
+    "model_names = [\"distillgpt2\"]"
    ]
   },
   {
@@ -160,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aggregator.display([results])"
+    "aggregator.display({\"distillgpt2\":results})"
    ]
   }
  ],
