Add more info to setup

--- a/exploration/ui_proto.ipynb
+++ b/exploration/ui_proto.ipynb
@@ -163,6 +163,13 @@
    "source": [
     "aggregator.display({\"distillgpt2\":results})"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Edit..."
+   ]
   }
  ],
  "metadata": {
