Add working editions

--- a/exploration/ui_proto.ipynb
+++ b/exploration/ui_proto.ipynb
@@ -104,8 +104,15 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "model = countergen.get_huggingface_gpt_model_evaluator()\n",
-                "model_names = [\"distillgpt2\"]"
+                "from countergen.utils import unwrap_or, get_device\n",
+                "from countergen.generative_models import get_evaluator_for_model\n",
+                "from transformers import GPT2LMHeadModel\n",
+                "import torch\n",
+                "\n",
+                "model_names = [\"distilgpt2\"]\n",
+                "device = get_device()\n",
+                "model: torch.nn.Module = GPT2LMHeadModel.from_pretrained(model_names[0]).to(device)\n",
+                "model_ev = get_evaluator_for_model(model, \"probability\")"
             ]
         },
         {
@@ -143,7 +150,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "results = countergen.evaluation.evaluate(aug_ds.samples, model, aggregator)"
+                "results = countergen.evaluation.evaluate(aug_ds.samples, model_ev, aggregator)"
             ]
         },
         {
@@ -161,7 +168,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "aggregator.display({\"distillgpt2\":results})"
+                "aggregator.display({\"distilgpt2\":results})"
             ]
         },
         {
@@ -172,8 +179,64 @@
             ]
         },
         {
-            "cell_type": "markdown",
+            "cell_type": "code",
+            "execution_count": null,
             "metadata": {},
+            "outputs": [],
+            "source": [
+                "from countergen.editing.activation_utils import get_corresponding_activations, get_mlp_modules\n",
+                "layers_dict = get_mlp_modules(model, [2,3])\n",
+                "layers = list(layers_dict.values())\n",
+                "activations = get_corresponding_activations(aug_ds.samples, model, layers)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from countergen.editing.activation_ds import ActivationsDataset\n",
+                "act_ds = ActivationsDataset.from_activations(activations, device=device)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from countergen.editing.direction_algos import inlp\n",
+                "dirs = inlp(act_ds, n_training_iters=10)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from countergen.editing.editor import edit_model, ReplacementConfig\n",
+                "configs = ReplacementConfig.from_module_dict(layers_dict, dirs, has_leftover=False)\n",
+                "new_model = edit_model(model, configs=configs)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "new_model_ev = get_evaluator_for_model(new_model, \"probability\")\n",
+                "new_results = countergen.evaluation.evaluate(aug_ds.samples, new_model_ev, aggregator)\n",
+                "aggregator.display({\"newdistilgpt2\":new_results})"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
             "source": []
         }
     ],
