Fix typing and imports

--- a/exploration/ui_proto.ipynb
+++ b/exploration/ui_proto.ipynb
@@ -46,7 +46,8 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "ds = countergen.Dataset.from_jsonl(\"D:\\_Docs\\Programmation\\Python\\Counterfactual-Dataset-Generator\\countergen\\data\\datasets\\doublebind.jsonl\")"
+                "from countergen.augmentation import Dataset\n",
+                "ds = Dataset.from_jsonl(\"D:\\_Docs\\Programmation\\Python\\Counterfactual-Dataset-Generator\\countergen\\data\\datasets\\doublebind.jsonl\")"
             ]
         },
         {
@@ -66,7 +67,8 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "augmenters = [countergen.SimpleAugmenter.from_default(\"gender\")]"
+                "from countergen.augmentation import SimpleAugmenter\n",
+                "augmenters = [SimpleAugmenter.from_default(\"gender\")]"
             ]
         },
         {
@@ -84,7 +86,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "aug_ds = countergen.data_augmentation.generate_all_variations(augmenters, ds)"
+                "aug_ds = ds.augment(augmenters)"
             ]
         },
         {
