--- a/exploration/ui_proto.ipynb
+++ b/exploration/ui_proto.ipynb
@@ -106,15 +106,15 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "from countergen.utils import unwrap_or, get_device\n",
-                "from countergen.generative_models import get_evaluator_for_model\n",
+                "from countergen.evaluation import get_evaluator_for_generative_model\n",
+                "from countergen.tools.utils import get_device\n",
                 "from transformers import GPT2LMHeadModel\n",
                 "import torch\n",
                 "\n",
                 "model_names = [\"distilgpt2\"]\n",
                 "device = get_device()\n",
                 "model: torch.nn.Module = GPT2LMHeadModel.from_pretrained(model_names[0]).to(device)\n",
-                "model_ev = get_evaluator_for_model(model, \"probability\")"
+                "model_ev = get_evaluator_for_generative_model(model, \"probability\")"
             ]
         },
         {
@@ -134,7 +134,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "aggregator = countergen.aggregators.PerformanceStatsPerCategory()"
+                "aggregator = countergen.evaluation.PerformanceStatsPerCategory()"
             ]
         },
         {
@@ -186,27 +186,10 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "from countergen.editing.activation_utils import get_corresponding_activations, get_mlp_modules\n",
+                "from countergen.editing import ActivationsDataset, get_mlp_modules\n",
                 "layers_dict = get_mlp_modules(model, [2,3])\n",
                 "layers = list(layers_dict.values())\n",
-                "activations = get_corresponding_activations(aug_ds.samples, model, layers)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": []
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "from countergen.editing.activation_ds import ActivationsDataset\n",
-                "act_ds = ActivationsDataset.from_activations(activations, device=device)"
+                "act_ds = ActivationsDataset.from_augmented_samples(aug_ds.samples, model, layers)"
             ]
         },
         {
@@ -225,8 +208,8 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "from countergen.editing.editor import edit_model, ReplacementConfig\n",
-                "configs = ReplacementConfig.from_module_dict(layers_dict, dirs, has_leftover=False)\n",
+                "from countergen.editing import edit_model, get_edit_configs\n",
+                "configs = get_edit_configs(layers_dict, dirs, has_leftover=False)\n",
                 "new_model = edit_model(model, configs=configs)"
             ]
         },
@@ -236,17 +219,10 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "new_model_ev = get_evaluator_for_model(new_model, \"probability\")\n",
+                "new_model_ev = get_evaluator_for_generative_model(new_model, \"probability\")\n",
                 "new_results = countergen.evaluation.evaluate(aug_ds.samples, new_model_ev, aggregator)\n",
                 "aggregator.display({\"newdistilgpt2\":new_results})"
             ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": []
         }
     ],
     "metadata": {
