--- a/exploration/ui_proto.ipynb
+++ b/exploration/ui_proto.ipynb
@@ -223,6 +223,45 @@
                 "new_results = countergen.evaluation.evaluate(aug_ds.samples, new_model_ev, aggregator)\n",
                 "aggregator.display({\"newdistilgpt2\":new_results})"
             ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from countergen.editing.direction_algos import rlace\n",
+                "dirs = rlace(act_ds, n_dim=2, out_iters=100, num_clfs_in_eval=1, evalaute_every=50)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from countergen.editing import edit_model, get_edit_configs\n",
+                "configs = get_edit_configs(layers_dict, dirs, has_leftover=False)\n",
+                "new_model = edit_model(model, configs=configs)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "new_model_ev = get_evaluator_for_generative_model(new_model, \"probability\")\n",
+                "new_results = countergen.evaluation.evaluate(aug_ds.samples, new_model_ev, aggregator)\n",
+                "aggregator.display({\"newdistilgpt2\":new_results})"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": []
         }
     ],
     "metadata": {
