Increase generatity of the get_evaluator_for_generative_model

--- a/exploration/ui_proto.ipynb
+++ b/exploration/ui_proto.ipynb
@@ -106,7 +106,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "from countergen.evaluation import get_evaluator_for_generative_model\n",
+                "from countergen.evaluation import get_evaluator_for_generative_model, pt_to_generative_model\n",
                 "from countergen.tools.utils import get_device\n",
                 "from transformers import GPT2LMHeadModel\n",
                 "import torch\n",
@@ -114,7 +114,7 @@
                 "model_names = [\"distilgpt2\"]\n",
                 "device = get_device()\n",
                 "model: torch.nn.Module = GPT2LMHeadModel.from_pretrained(model_names[0]).to(device)\n",
-                "model_ev = get_evaluator_for_generative_model(model, \"probability\")"
+                "model_ev = get_evaluator_for_generative_model(pt_to_generative_model(model), \"probability\")"
             ]
         },
         {
@@ -219,7 +219,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "new_model_ev = get_evaluator_for_generative_model(new_model, \"probability\")\n",
+                "new_model_ev = get_evaluator_for_generative_model(pt_to_generative_model(new_model), \"probability\")\n",
                 "new_results = countergen.evaluation.evaluate(aug_ds.samples, new_model_ev, aggregator)\n",
                 "aggregator.display({\"newdistilgpt2\":new_results})"
             ]
@@ -251,7 +251,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "new_model_ev = get_evaluator_for_generative_model(new_model, \"probability\")\n",
+                "new_model_ev = get_evaluator_for_generative_model(pt_to_generative_model(new_model), \"probability\")\n",
                 "new_results = countergen.evaluation.evaluate(aug_ds.samples, new_model_ev, aggregator)\n",
                 "aggregator.display({\"newdistilgpt2\":new_results})"
             ]
