--- a/exploration/ui_proto.ipynb
+++ b/exploration/ui_proto.ipynb
@@ -46,8 +46,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "from countergen.augmentation import Dataset\n",
-                "ds = Dataset.from_jsonl(\"D:\\_Docs\\Programmation\\Python\\Counterfactual-Dataset-Generator\\countergen\\data\\datasets\\doublebind.jsonl\")"
+                "ds = countergen.Dataset.from_default(\"doublebind\")"
             ]
         },
         {
@@ -67,8 +66,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "from countergen.augmentation import SimpleAugmenter\n",
-                "augmenters = [SimpleAugmenter.from_default(\"gender\")]"
+                "augmenters = [countergen.SimpleAugmenter.from_default(\"gender\")]"
             ]
         },
         {
@@ -106,7 +104,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "from countergen.evaluation import get_generative_model_evaluator, api_to_generative_model\n",
+                "from countergen import get_generative_model_evaluator, api_to_generative_model\n",
                 "\n",
                 "model_names = [\"ada\"]\n",
                 "model_ev = get_generative_model_evaluator(api_to_generative_model(\"text-ada-001\"), \"probability\")"
@@ -129,7 +127,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "aggregator = countergen.evaluation.PerformanceStatsPerCategory()"
+                "aggregator = countergen.aggregators.PerformanceStatsPerCategory()"
             ]
         },
         {
@@ -147,7 +145,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "results = countergen.evaluation.evaluate(aug_ds.samples, model_ev, aggregator)"
+                "results = countergen.evaluate(aug_ds.samples, model_ev, aggregator)"
             ]
         },
         {
